objects/nSBA__SBEOC_Interaction__c.object
<CustomObject>
    <description>Maintains the state for SBEOC interactions over the course of a transaction.</description>
    <fields>
        <fullName>nSBA__Action__c</fullName>
        <description>The system automatically populates this required text field with the action for this transaction.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>This automatically populated required field displays the action for this transaction.</inlineHelpText>
        <label>Action</label>
        <length>40</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nSBA__Child_Interaction_Count__c</fullName>
        <defaultValue>0</defaultValue>
        <description>The system populates this field with the expected child interactions count. Default is zero.</description>
        <inlineHelpText>Optional: The expected child interactions. Default is zero.</inlineHelpText>
        <label>Expected Child Interaction Count</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>nSBA__Comment__c</fullName>
        <description>The user populates this optional text field with the most recent comment for this interaction. By default, it is blank.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Enter any additional comments about the transaction in this field.</inlineHelpText>
        <label>Comment</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nSBA__Context_Id__c</fullName>
        <description>The system automatically populates this required text field with the identifier of the object related to this transaction.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>This automatically populated required field displays the identifier of the object related to this transaction.</inlineHelpText>
        <label>Context ID</label>
        <length>40</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nSBA__Correlation_Id__c</fullName>
        <description>The system automatically populates this required string field with an ID that refers to all events and activities in the scope of this transaction.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>This automatically populated required field displays an ID that refers to all events and activities in the scope of this transaction.</inlineHelpText>
        <label>Correlation ID</label>
        <length>40</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nSBA__Interaction_Type__c</fullName>
        <description>The system automatically populates this required picklist field with the interaction type specified in the transactional data of this transaction.</description>
        <inlineHelpText>This system-populated required field displays the interaction type associated with this interaction record.</inlineHelpText>
        <label>Interaction Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>SBEOC</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>nSBA__Is_Successful__c</fullName>
        <defaultValue>false</defaultValue>
        <description>The system automatically selects this checkbox field if the transaction was successful.</description>
        <inlineHelpText>This automatically populated field displays the success status of the transaction.</inlineHelpText>
        <label>Is Successful</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>nSBA__Message__c</fullName>
        <description>The system automatically populates this optional text field with the most recent relevant integration message (such as errors or last recorded success state). By default, it is blank.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>This automatically populated field displays the most recent integration message (such as errors or last recorded success state).</inlineHelpText>
        <label>Message</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nSBA__Parent_Interaction__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The system automatically populates this lookup field with the parent record to which this transaction is associated.</description>
        <inlineHelpText>This automatically populated field displays the parent record to which this transaction is associated.</inlineHelpText>
        <label>Parent SBEOC Interaction</label>
        <referenceTo>nSBA__SBEOC_Interaction__c</referenceTo>
        <relationshipLabel>SBEOC Interactions</relationshipLabel>
        <relationshipName>SBEOC_Interactions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>nSBA__Status__c</fullName>
        <description>The system automatically populates this required text field with the normalized status to which this transaction was set.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>This system-populated required field displays the status to which this transaction was set when created.</inlineHelpText>
        <label>Status</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nSBA__Vendor_Provider__c</fullName>
        <description>The system automatically populates this text required field with the fully qualified class name of the vendor provider for this transaction.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>This automatically populated required field displays the fully qualified class name of the vendor provider for this transaction.</inlineHelpText>
        <label>Vendor Provider</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>SBEOC Interaction</label>
    <nameField>
        <displayFormat>SBEOC-{00000}</displayFormat>
        <label>SBEOC Interaction</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SBEOC Interactions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>